[metadata]
name = homepage2vec
version = 0.0.3c
author = Tiziano Piccardi
author_email = tiziano.piccardi@epfl.ch
description = Language-Agnostic Website Embedding and Classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epfl-dlab/Homepage2vec
project_urls =
    Bug Tracker = https://github.com/epfl-dlab/Homepage2vec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch==1.13.0
    torchvision==0.14.0
    beautifulsoup4>=4.11.1
    sentence-transformers>=2.2.2
    lxml>=4.9.1

[options.extras_require]
visual =
    selenium>=4.6.1

[options.packages.find]
where = src
